--- a/site/index.html
+++ b/site/index.html
@@ -52,36 +52,18 @@
               class="profile-input"
               id="profile-input"
               placeholder="profil"
+              maxlength="12"
             />
             <button class="profile-button" id="player-btn">></button>
             <button class="profile-remove-button" id="player-remove-btn">
-              profil törlése
+              Profil Törlése
             </button>
           </div>
         </div>
         <div class="gl-vert-wrapper">
           <span class="gl-label">Eddigi játékok</span>
           <ul id="prev-games" class="game-list">
-            <li class="gl-entry">profile1 time: 42.02</li>
-            <li class="gl-entry">profile1 time: 42.02</li>
-            <li class="gl-entry">profile1 time: 42.02</li>
-            <li class="gl-entry">profile1 time: 42.02</li>
-            <li class="gl-entry">profile1 time: 42.02</li>
-            <li class="gl-entry">profile1 time: 42.02</li>
-            <li class="gl-entry">profile1 time: 42.02</li>
-            <li class="gl-entry">profile1 time: 42.02</li>
-            <li class="gl-entry">profile1 time: 42.02</li>
-            <li class="gl-entry">profile1 time: 42.02</li>
-            <li class="gl-entry">profile1 time: 42.02</li>
-            <li class="gl-entry">profile1 time: 42.02</li>
-            <li class="gl-entry">profile1 time: 42.02</li>
-            <li class="gl-entry">profile1 time: 42.02</li>
-            <li class="gl-entry">profile1 time: 42.02</li>
-            <li class="gl-entry">profile1 time: 42.02</li>
-            <li class="gl-entry">profile1 time: 42.02</li>
-            <li class="gl-entry">profile1 time: 42.02</li>
-            <li class="gl-entry">profile1 time: 42.02</li>
-            <li class="gl-entry">profile1 time: 42.02</li>
+            
           </ul>
         </div>
       </div>
